# to_do_list_CLI

todo-cli/: pyproject.toml
todo-cli/todo_cli/: todo.py
